--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "license": "MIT",
   "private": true,
   "homepage": "https://christiankienle.github.io/minipress/",
+  "workspaces": [
+    "_examples/**",
+    "_packages/**",
+    "_support/*",
+    "docs",
+    "snappy-apps/**"
+  ],
   "scripts": {
-    "postinstall": "npm run bs",
+    "postinstall": "lerna bootstrap --concurrency 1 --use-workspaces",
     "typecheck": "lerna run typecheck --no-bail",
     "test": "lerna run test --concurrency 1",
     "check-dependencies": "npm outdated && lerna exec --no-bail -- npm outdated",
@@ -14,32 +21,32 @@
     "gh-pages": "node _support/gh-pages",
     "bs": "lerna bootstrap",
     "clean": "lerna clean -y",
-    "docs": "cd docs && npm run dev",
-    "docs:debug": "cd docs && npm run dev:debug",
-    "docs:deploy": "cd docs && npm run deploy",
-    "docs:gen": "cd docs && npm run gen",
-    "docs:serve": "cd docs && npm run serve",
-    "docs:gen:debug": "cd docs && npm run gen:debug",
-    "helloworld": "cd _examples/hello-world && npm run dev",
-    "helloworld:serve": "cd _examples/hello-world && npm run serve",
-    "helloworld:debug": "cd _examples/hello-world && npm run dev:debug",
-    "helloworld:gen": "cd _examples/hello-world && npm run gen",
-    "helloworld:gen:debug": "cd _examples/hello-world && npm run gen:debug",
-    "blog": "cd _examples/blog && npm run dev",
-    "blog:serve": "cd _examples/blog && npm run serve",
-    "blog:debug": "cd _examples/blog && npm run dev:debug",
-    "blog:gen": "cd _examples/blog && npm run gen",
-    "blog:gen:debug": "cd _examples/blog && npm run gen:debug",
-    "features": "cd _examples/features && npm run dev",
-    "features:debug": "cd _examples/features && npm run dev:debug",
-    "features:gen": "cd _examples/features && npm run gen",
-    "features:serve": "cd _examples/features && npm run serve",
-    "features:gen:debug": "cd _examples/features && npm run gen:debug",
-    "perftest": "cd _examples/performance-test && npm run dev",
-    "perftest:debug": "cd _examples/performance-test && npm run dev:debug",
-    "perftest:gen": "cd _examples/performance-test && npm run gen",
-    "perftest:serve": "cd _examples/performance-test && npm run serve",
-    "perftest:gen:debug": "cd _examples/performance-test && npm run gen:debug"
+    "docs": "cd docs && yarn dev",
+    "docs:debug": "cd docs && yarn dev:debug",
+    "docs:deploy": "cd docs && yarn deploy",
+    "docs:gen": "cd docs && yarn gen",
+    "docs:serve": "cd docs && yarn serve",
+    "docs:gen:debug": "cd docs && yarn gen:debug",
+    "helloworld": "cd _examples/hello-world && yarn dev",
+    "helloworld:serve": "cd _examples/hello-world && yarn serve",
+    "helloworld:debug": "cd _examples/hello-world && yarn dev:debug",
+    "helloworld:gen": "cd _examples/hello-world && yarn gen",
+    "helloworld:gen:debug": "cd _examples/hello-world && yarn gen:debug",
+    "blog": "cd _examples/blog && yarn dev",
+    "blog:serve": "cd _examples/blog && yarn serve",
+    "blog:debug": "cd _examples/blog && yarn dev:debug",
+    "blog:gen": "cd _examples/blog && yarn gen",
+    "blog:gen:debug": "cd _examples/blog && yarn gen:debug",
+    "features": "cd _examples/features && yarn dev",
+    "features:debug": "cd _examples/features && yarn dev:debug",
+    "features:gen": "cd _examples/features && yarn gen",
+    "features:serve": "cd _examples/features && yarn serve",
+    "features:gen:debug": "cd _examples/features && yarn gen:debug",
+    "perftest": "cd _examples/performance-test && yarn dev",
+    "perftest:debug": "cd _examples/performance-test && yarn dev:debug",
+    "perftest:gen": "cd _examples/performance-test && yarn gen",
+    "perftest:serve": "cd _examples/performance-test && yarn serve",
+    "perftest:gen:debug": "cd _examples/performance-test && yarn gen:debug"
 
   },
   "devDependencies": {
