--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
     "titleBar.inactiveForeground": "#15202b99",
     "statusBar.background": "#42b883",
     "statusBarItem.hoverBackground": "#359268",
-    "statusBar.foreground": "#15202b"
+    "statusBar.foreground": "#15202b",
+    "activityBar.activeBackground": "#65c89b"
   },
   "peacock.color": "#42b883",
   "debug.node.autoAttach": "on",
